objects/AttachmentExtension__c.object
<CustomObject>
    <fields>
        <fullName>Archive_Process_Code__c</fullName>
        <label>Archive Process Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archive_Record_ID__c</fullName>
        <label>Archive Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArchivingSystemName__c</fullName>
        <label>ArchivingSystemName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentReference__c</fullName>
        <externalId>true</externalId>
        <label>AttachmentReference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckedOutBy__c</fullName>
        <label>CheckedOutBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By_Archive__c</fullName>
        <label>Last Updated By Archive</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isChecked</label>
        <type>Checkbox</type>
    </fields>
    <label>AttachmentExtension</label>
    <nameField>
        <displayFormat>AE-{000000000}</displayFormat>
        <label>AttachmentExtension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttachmentExtension</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>